Fixed issue with white space at bottom of pages, I think.

--- a/client/src/pages/EditTripPage/editTripStyle.scss
+++ b/client/src/pages/EditTripPage/editTripStyle.scss
@@ -1,10 +1,5 @@
 /*Edit Trip Page Styles*/
 
-.edit-trip-container {
-    margin-top: 2%;
-}
-
-
 .back-edit {
     background-image: url(road.jpg);
     background-repeat: no-repeat;
