--- a/client/src/pages/TripCreationPage/tripCreationStyles.scss
+++ b/client/src/pages/TripCreationPage/tripCreationStyles.scss
@@ -4,13 +4,8 @@
     background-image: url("rain.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    /* height: 1000px; */
 }
 
-
-.trip-create-container {
-    margin-top: 2%;
-}
 
 @media (max-width: 615px) {
     .trip-create-container{
