--- a/client/src/pages/UserTripPage/userStyles.scss
+++ b/client/src/pages/UserTripPage/userStyles.scss
@@ -27,7 +27,7 @@
 .back-trip {
   background-image: url(lake.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   
 }
 
